Fixed overflow on landing page to display the expanding animation properly

--- a/src/App.css
+++ b/src/App.css
@@ -197,6 +197,7 @@ LANDING PAGE
     display: flex;
     align-items: center;
     position: relative;
+    overflow: visible;
 }
 
 #nav__left {
